--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <!-- Example 1 -->
 <h3><a name="ex1" class="anchor" href="#ex1"><span class="octicon octicon-link"></span>Ukrainian border</a></h3>
-<p>To receive hull (polygon) by point set just call <code>hull</code> function:</p>
+<p>To receive concave hull (polygon) by point set just call <code>hull</code> function:</p>
 <pre><code>var pointset = [[168, 180], [168, 178], [168, 179], ...];
 var pts = hull(pointset, 10);
 // ... draw pts</code></pre>
