fix geo points example

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ var pts = hull(geo, 0.0011, ['.lng', '.lat']);
   <div id="map" style="width: 600px; height: 400px"></div>
   <script>
   function example4() {
-    var map = L.map('map').setView([51.4896801420082, -0.210695270900937], 15);
+    var map = L.map('map').setView([51.4894, -0.209], 15);
     L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
         maxZoom: 18,
         id: 'examples.map-i875mjb7'
