--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ var pts = hull(geo, 0.0011, ['.lng', '.lat']);
         L.circleMarker(latlng, {radius: 2}).addTo(map);
     });
     var pts = hull(dataGeo, 0.0011, ['.lng', '.lat']);
-    L.polygon(pts).addTo(map);
+    L.polygon(pts, {weight: 2}).addTo(map);
   }
   </script>
 </p>
