--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="inner">
         <h1>Hull.js examples</h1>
         <h2></h2>
-        <a href="https://github.com/AndreyGeonya/hull" class="button"><small>View project on</small> GitHub</a>
+        <a href="https://github.com/AndriiHeonia/hull" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
