--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ var pts = hull(pointset, 0.0011, ['.lng', '.lat']);
 
 <!-- Example 5 -->
 <h3><a name="ex5" class="anchor" href="#ex5"><span class="octicon octicon-link"></span>Geo points on globe</a></h3>
-<p>All calculations in hull.js based on cartesian coordinate system. So, if you use it for the calculation and data visualization on global map please don't forget about globe distortion during projection. In this case better to convert latitudes and longitudes to cartesian coordinates, calculate concave hull and then convert points back. For example (using <a href="http://leafletjs.com/" target="_blank">Leaflet</a> library):</p>
+<p>All calculations in hull.js based on cartesian coordinate system. So, if you use it for the calculation and visualization data on global map please don't forget about globe distortion during projection. In this case better to convert latitudes and longitudes to cartesian coordinates, calculate concave hull and then convert points back. For example (using <a href="http://leafletjs.com/" target="_blank">Leaflet</a> library):</p>
 <pre><code>var pointset = [
     { lng:-20, lat:90 },  
     { lng:-20, lat:80 },
