--- a/index.html
+++ b/index.html
@@ -343,7 +343,11 @@ pts = pts.map(function(pt) {
         </section>
       </div>
     </div>
-
+    <footer>
+      <div class="inner">
+        &copy; 2014-2015 <a href="https://www.linkedin.com/in/andriiheonia" target="_blank">Andrii Heonia</a>
+      </div>
+    </footer>
     <script>
     window.onload = function() {
         example1();
