--- a/debug/geo.html
+++ b/debug/geo.html
@@ -4,21 +4,67 @@
     <meta charset="utf-8">
     <title>Concave hull debug page</title>
     <script src="../dist/hull.js"></script>
+
     <script src="./data/geo.js"></script>
-    <script src="http://leafletjs.com/dist/leaflet.js"></script>
-    <link rel="stylesheet" href="http://leafletjs.com/dist/leaflet.css" type="text/css" />
+    <script src="./data/geoNorvay600k.js"></script>
+
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 </head>
 <body>
-    <div id="map" style="width: 800px; height: 600px"></div>
+    <div id="mapContainer" style="width: 1024px; height: 650px; position: absolute; left: 0px; top: 0px;"></div>
+    <canvas id="canv" width="1024" height="650" style="pointer-events: none; border: 1px solid black; position: absolute; left: 0px; top: 0px;"></canvas>
     <script>
+    var map;
     window.onload = function() {
-        var map = L.map('map').setView([51.4896801420082, -0.210695270900937], 15);
-        L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', { maxZoom: 18, id: 'examples.map-i875mjb7'}).addTo(map);
-        geo.forEach(function(latlng) {
-            L.circleMarker(latlng, {radius: 2}).addTo(map);
+        var pointset = geoNorvay600k,
+            c = document.getElementById('canv'),
+            ctx = c.getContext('2d');
+
+        map = L.map('mapContainer').setView({lat: 67.23806155909902, lng: 23.5546875}, 4);
+        // pointset = geo;
+        // map = L.map('mapContainer').setView(pointset[pointset.length-1], 15);
+
+        L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpandmbXliNDBjZWd2M2x6bDk3c2ZtOTkifQ._QA7i5Mpkd_m30IGElHziw', {
+			maxZoom: 18,
+			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
+				'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+				'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+			id: 'mapbox.streets'
+		}).addTo(map);
+
+        function clearCanvas() {
+            ctx.clearRect(0, 0, c.width, c.height);
+        }
+        function drawAllPoints() {
+            for (var i = 0; i < pointset.length; i++) {
+                var pt = map.latLngToContainerPoint(pointset[i]);
+                ctx.fillStyle="red";
+                ctx.beginPath();
+                ctx.arc(pt.x, pt.y, 0.5, 0, 2 * Math.PI);
+                ctx.fill();
+                ctx.closePath();
+            }
+        }
+
+        drawAllPoints();
+        map.on('dragstart', clearCanvas);
+        map.on('zoomstart', clearCanvas);
+        map.on('dragend', drawAllPoints);
+        map.on('zoomend', drawAllPoints);
+
+        map.on('click', function(e) {
+           console.log(e);
         });
-        var hullPts = hull(geo, 0.0011, ['.lng', '.lat']);
-        L.polygon(hullPts).addTo(map);
+
+        console.time('hull');
+        var hullPts = hull(pointset, 0.5);
+        // var hullPts = hull(pointset, 0.0011, ['.lng', '.lat']);
+        console.timeEnd('hull');
+        console.log('hullPts.length: ', hullPts.length);
+
+        L.polygon(hullPts, {weight: 2}).addTo(map);
+
     };
     </script>
 </body>
