--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <!-- Example 1 -->
 <h3><a name="ex1" class="anchor" href="#ex1"><span class="octicon octicon-link"></span>Ukrainian border</a></h3>
-<p>To receive concave hull (polygon) by point set just call <code>hull</code> function:</p>
+<p>To receive concave hull (polygon) by the set of points just call <code>hull</code> function:</p>
 <pre><code>var pointset = [[168, 180], [168, 178], [168, 179], ...];
 var pts = hull(pointset, 10);
 // ... draw pts</code></pre>
@@ -119,7 +119,7 @@ var pts = hull(pointset, 80);
 
 <!-- Example 2 -->
 <h3><a name="ex2" class="anchor" href="#ex2"><span class="octicon octicon-link"></span>Big horse</a></h3>
-<p>Hull.js also works well with large data sets. In this example more than 52K points, <code>concavity = 20</code>. Execution time in your browser: <span id="horseExecTime"></span> ms.</p>
+<p>Hull.js also works well with the large data sets. In this example more than 52K points, <code>concavity = 20</code>. Execution time in your browser: <span id="horseExecTime"></span> ms.</p>
 
 <p>
   <canvas id="canv2" width="960" height="750"></canvas>
@@ -165,7 +165,7 @@ var pts = hull(pointset, 80);
 
 <!-- Example 3 -->
 <h3><a name="ex3" class="anchor" href="#ex3"><span class="octicon octicon-link"></span>Chars</a></h3>
-<p>If you want to get hulls of the point set that looks like multipolygon, then you need to call <code>hull</code> function for each subset (for each polygon). <br /> In this example we use LukaszKrawczyk's <a href="https://github.com/LukaszKrawczyk/clustering" target="_blank">density based clustering library</a> (but you can use any other implementation) to split one large point set to several groups, after that we recive hulls for each of them:</p>
+<p>If you want to get hulls of the point set that looks like a multipolygon, then you need to call <code>hull</code> function for the each subset (for each polygon). In this example we use LukaszKrawczyk's <a href="https://github.com/LukaszKrawczyk/clustering" target="_blank">density based clustering library</a> (but you can use any other implementation) to split one large point set to the several groups, after that we recive hulls for each of them:</p>
 <pre><code>var clusters,
     dbscan = new DBSCAN(),
     pointset = [[14, 18], [22, 19], [23, 20], ...];
@@ -233,7 +233,7 @@ clusters.forEach(function(pointset) {
 
 <!-- Example 3_1 -->
 
-<p>Else (without clustering) you will receive something like that:</p>
+<p>Otherwise (without clustering) you'll receive something like that:</p>
 <pre><code>var pts = hull(pointset, 30);
 // ... draw pts
 </code></pre>
@@ -271,7 +271,7 @@ clusters.forEach(function(pointset) {
 
 <!-- Example 4 -->
 <h3><a name="ex4" class="anchor" href="#ex4"><span class="octicon octicon-link"></span>Geo points</a></h3>
-<p>If your points format differs from the [x, y] then you can provide custom format pattern:</p>
+<p>If your point format differs from the [x, y] then you can provide a custom format pattern:</p>
 <pre><code>var pointset = [
     { lng: -0.2067, lat: 51.4911 },
     { lng: -0.2070, lat: 51.4915 },
@@ -302,8 +302,8 @@ var pts = hull(pointset, 0.0011, ['.lng', '.lat']);
 <!-- END: Example 4 -->
 
 <!-- Example 5 -->
-<h3><a name="ex5" class="anchor" href="#ex5"><span class="octicon octicon-link"></span>Geo points on globe</a></h3>
-<p>All calculations in hull.js based on cartesian coordinate system. If you use it for the calculation and visualization data on global map please don't forget that globe has the shape of the geoid, latitude and longitude are angles (not points with X and Y), and after projection we have some map distortion. So, for better accuracy you need to convert latitudes and longitudes to cartesian coordinates, calculate concave hull and then convert points back to geo points. For example (using <a href="http://leafletjs.com/" target="_blank">Leaflet</a> library):</p>
+<h3><a name="ex5" class="anchor" href="#ex5"><span class="octicon octicon-link"></span>Geo points on the globe</a></h3>
+<p>All calculations in hull.js based on the cartesian coordinate system. If you use it for the calculation and data visualization on the global map please don't forget that globe has the shape of geoid, latitude and longitude are angles (not points with X and Y), and after projection we have some map distortion. So, for the better accuracy you need to convert latitudes and longitudes to cartesian coordinates, calculate concave hull and then convert points back to the geo points. For example (using <a href="http://leafletjs.com/" target="_blank">Leaflet</a> library):</p>
 <pre><code>var pointset = [
     { lng:-20, lat:90 },  
     { lng:-20, lat:80 },
@@ -345,7 +345,7 @@ pts = pts.map(function(pt) {
     </div>
     <footer>
       <div class="inner">
-        &copy; 2014-2015 <a href="https://www.linkedin.com/in/andriiheonia" target="_blank">Andrii Heonia</a>
+        &copy; 2014-2016 <a href="https://www.linkedin.com/in/andriiheonia" target="_blank">Andrii Heonia</a>
       </div>
     </footer>
     <script>
