--- a/debug/index.html
+++ b/debug/index.html
@@ -5,6 +5,7 @@
     <title>Concave hull debug page</title>
     <script src="../dist/hull.js"></script>
     <script src="./data/ua874.js"></script>
+    <script src="./data/question.js"></script>
     <script src="./data/horse13k.js"></script>
     <script src="./data/horse26k.js"></script>
     <script src="./data/horse52k.js"></script>
