fix broken examples

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <script src="./javascripts/dataHorse.js"></script>
     <script src="./javascripts/dataGeo.js"></script>
     <script src="./javascripts/dataGeoGlobal.js"></script>
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@0.7.3/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@0.7.3/dist/leaflet.js"></script>
   </head>
 
   <body>
@@ -345,7 +345,7 @@ pts = pts.map(function(pt) {
     </div>
     <footer>
       <div class="inner">
-        &copy; 2014-2022 <a href="https://www.linkedin.com/in/andriiheonia" target="_blank">Andrii Heonia</a>
+        &copy; 2014-2024 <a href="https://www.linkedin.com/in/andriiheonia" target="_blank">Andrii Heonia</a>
       </div>
     </footer>
     <script>
